sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:5: error: '(' expected but identifier found.
  while gap>0{
        ^AlgShellSort:9: error: illegal start of simple expression
}
^